<resources>
    <string name="app_name">Dice Master</string>
    <!-- Board Fragment -->
    <string name="board_fragment_name">Juegos de Mesa</string>
    <string name="board_one_vs_one">Uno Contra Uno</string>
    <string name="board_several_players">Varios Jugadores</string>
    <!-- RPG Fragment -->
    <string name="rpg_fragment_name">Juegos de Rol</string>
    <string name="rpg_fragment_single_throw">Tirada Única</string>
    <string name="rpg_fragment_multiple_throws">Varias Tiradas</string>
    <string name="rpg_fragment_initiative">Tabla de Iniciativa</string>
    <string name="rpg_fragment_critics_and_fumbles">Críticos y Pifias</string>
    <!-- About Fragment -->
    <string name="about_fragment_name">Sobre</string>
    <!-- Cards -->
    <string name="card_author_title">Sobre el Autor</string>
    <string name="card_author_text">La programación, y el diseño de la aplicación corren a cargo de Sergio Cárdenas Romero, Ingeniero Técnico
        en Informática de Sistemas por la Escuela Técnica Superior de Ingeniería Informática de la Universidad de Sevilla.</string>
    <string name="card_author_button">Accede a su currículum online: </string>
    <string name="card_author_url"></string>
    <string name="card_photos_title">Fotografías</string>
    <string name="card_photos_text">Las fotografías que se usan en esta aplicación han sido tomadas por Gonzalo Ruíz Corchero.</string>
    <string name="card_photos_button">Accede a su portafolios digital en DeviantArt: </string>
    <string name="card_photos_url"></string>
    <string name="card_fonts_title">Fuentes</string>
    <string name="card_fonts_text">Las fuentes usadas en esta aplicación han sido extraídas de Google Fonts.
        \nLista de fuentes usadas:
        \n· Fredericka the Great
        \n· Slabo</string>
    <string name="card_fonts_button">Puedes obtener estas y muchas más fuentes para cualquier tipo de proyecto en Google Fonts pulsando aquí: </string>
    <string name="card_fonts_url">https://www.google.com/fonts</string>
    <string name="card_arc_layout_title">ArcLayout</string>
    <string name="card_arc_layout_text">Librería usada para el layout en arco de la tirada de dados ha sido realizada por ogaclejapan.</string>
    <string name="card_arc_layout_button">Puedes acceder al repositorio, con documentación y aplicación de ejemplo, en github aquí: </string>
    <string name="card_arc_layout_url">https://github.com/ogaclejapan/ArcLayout</string>
    <string name="card_calligraphy_title">Calligraphy</string>
    <string name="card_calligraphy_text">Librería usada para facilitar el uso de fuentes customizadas, realizada por chrisjenx.</string>
    <string name="card_calligraphy_button">Puedes acceder al repositorio, con documentación y ejemplos, en github aquí: </string>
    <string name="card_calligraphy_url">https://github.com/chrisjenx/Calligraphy</string>

    <!-- One Vs One -->
    <string name="one_vs_one_name">Uno Contra Uno</string>
    <string name="one_vs_one_player_one_name">Jugador Uno</string>
    <string name="one_vs_one_player_one_dialog_title">Nombre de Jugador Uno</string>
    <string name="one_vs_one_player_one_dialog_text">Escoja un nombre para el jugador uno: </string>
    <string name="one_vs_one_player_one_neg_button">Cancelar</string>
    <string name="one_vs_one_player_one_pos_button">Aceptar</string>
    <string name="one_vs_one_player_two_name">Jugador Dos</string>
    <string name="one_vs_one_player_two_dialog_title">Nombre de Jugador Dos</string>
    <string name="one_vs_one_player_two_dialog_text">Escoja un nombre para el jugador dos: </string>
    <string name="one_vs_one_player_two_neg_button">Cancelar</string>
    <string name="one_vs_one_player_two_pos_button">Aceptar</string>
    <string name="one_vs_one_player_increase_score">+</string>
    <string name="one_vs_one_player_decrease_score">-</string>
    <string name="one_vs_one_default_score">0</string>
    <string name="one_vs_one_player_one_score_dialog_title">Puntuación de Jugador Uno</string>
    <string name="one_vs_one_player_one_score_dialog_text">Introduce la puntuación del jugador uno: </string>
    <string name="one_vs_one_player_two_score_dialog_title">Puntuación de Jugador Dos</string>
    <string name="one_vs_one_player_two_score_dialog_text">Introduce la puntuación del jugador dos: </string>

    <!-- Several Players -->
    <string name="several_players_name">Varios Jugadores</string>
    <string name="several_players_new_player_dialog_title">Nuevo Jugador</string>
    <string name="several_players_new_player_dialog_text">Introduce el nombre del nuevo jugador: </string>
    <string name="several_players_delete_player_dialog_title">Eliminar Jugador</string>
    <string name="several_players_delete_player_dialog_text">¿Desea eliminar al jugador %s?</string>
    <string name="several_players_go_back">Pulse atrás de nuevo para salir de la pantalla</string>

    <!-- Single Throw -->
    <string name="single_throw_name">Tirada Única</string>
    <string name="single_throw_d2">d2</string>
    <string name="single_throw_d3">d3</string>
    <string name="single_throw_d4">d4</string>
    <string name="single_throw_d6">d6</string>
    <string name="single_throw_d8">d8</string>
    <string name="single_throw_d10">d10</string>
    <string name="single_throw_d12">d12</string>
    <string name="single_throw_d20">d20</string>
    <string name="single_throw_d100">d100</string>
    <string name="single_throw_result">¡%s!</string>
    <string name="single_throw_sound_button">Sonido</string>

    <!-- Multiple Throws -->
    <string name="multiple_throws_name">Tiradas Múltiples</string>

    <!-- Initiative -->
    <string name="initiative_name">Tabla de Iniciativa</string>

    <!-- Critics and Fumbles -->
    <string name="critics_and_fumbles_name">Críticos y Pifias</string>
    <string name="critics_and_fumbles_critical">¡20!</string>
    <string name="critics_and_fumbles_fumble">¡1!</string>
</resources>
