<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_screen_background"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:orientation="vertical"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/rpg_fragment_single_throw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/normal_button"
            android:text="@string/rpg_fragment_single_throw"
            style="@style/normal_button"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/rpg_fragment_multiple_throws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/normal_button"
            android:text="@string/rpg_fragment_multiple_throws"
            style="@style/normal_button"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/rpg_fragment_initiative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/normal_button"
            android:text="@string/rpg_fragment_initiative"
            style="@style/normal_button"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/rpg_fragment_critics_and_fumbles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/normal_button"
            android:text="@string/rpg_fragment_critics_and_fumbles"
            style="@style/normal_button"
            />

    </LinearLayout>

</RelativeLayout>