<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_primary_dark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_content_margin"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_author_title"
                        style="@style/about_card_title"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@drawable/line_orange"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:layout_marginTop="4dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:text="@string/card_author_text"
                        style="@style/about_card_text"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/card_author_button"
                        style="@style/about_card_text"
                        />

                    <ImageButton
                        android:id="@+id/card_author_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_linked_in"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_content_margin"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_photos_title"
                        style="@style/about_card_title"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@drawable/line_orange"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:layout_marginTop="4dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:text="@string/card_photos_text"
                        style="@style/about_card_text"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/card_photos_button"
                        style="@style/about_card_text"
                        />

                    <ImageButton
                        android:id="@+id/card_photos_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_deviant_art"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_content_margin"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_fonts_title"
                        style="@style/about_card_title"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@drawable/line_orange"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:layout_marginTop="4dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:text="@string/card_fonts_text"
                        style="@style/about_card_text"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/card_fonts_button"
                        style="@style/about_card_text"
                        />

                    <ImageButton
                        android:id="@+id/card_fonts_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_google_fonts"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_content_margin"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_arc_layout_title"
                        style="@style/about_card_title"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@drawable/line_orange"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:layout_marginTop="4dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:text="@string/card_arc_layout_text"
                        style="@style/about_card_text"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/card_arc_layout_button"
                        style="@style/about_card_text"
                        />

                    <ImageButton
                        android:id="@+id/card_arc_layout_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_git_hub"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_content_margin"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_calligraphy_title"
                        style="@style/about_card_title"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@drawable/line_orange"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:layout_marginTop="4dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_content_margin"
                        android:text="@string/card_calligraphy_text"
                        style="@style/about_card_text"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/card_calligraphy_button"
                        style="@style/about_card_text"
                        />

                    <ImageButton
                        android:id="@+id/card_calligraphy_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_git_hub"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>