<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_primary_dark"
    android:padding="@dimen/activity_content_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_one_vs_one"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/one_vs_one_card_margin"
        app:cardCornerRadius="@dimen/board_player_card_corner_radius"
        app:cardElevation="@dimen/board_player_card_elevation"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/one_vs_one_card_margin"
            >

            <TextView
                android:id="@+id/one_vs_one_player_one_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_vs_one_player_one_name"
                style="@style/one_vs_one_player_name"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <Button
                        android:id="@+id/one_vs_one_player_one_increase_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/one_vs_one_player_increase_score"
                        style="@style/one_vs_one_player_button"
                        />

                    <EditText
                        android:id="@+id/one_vs_one_player_one_score"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/one_vs_one_default_score"
                        style="@style/one_vs_one_score"
                        />

                    <Button
                        android:id="@+id/one_vs_one_player_one_decrease_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/one_vs_one_player_decrease_score"
                        style="@style/one_vs_one_player_button"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    >


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/one_vs_one_card_margin"
        app:cardCornerRadius="@dimen/board_player_card_corner_radius"
        app:cardElevation="@dimen/board_player_card_elevation"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/one_vs_one_card_margin"
            >

            <TextView
                android:id="@+id/one_vs_one_player_two_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_vs_one_player_two_name"
                style="@style/one_vs_one_player_name"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <Button
                        android:id="@+id/one_vs_one_player_two_increase_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/one_vs_one_player_increase_score"
                        style="@style/one_vs_one_player_button"
                        />

                    <EditText
                        android:id="@+id/one_vs_one_player_two_score"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/one_vs_one_default_score"
                        style="@style/one_vs_one_score"
                        />

                    <Button
                        android:id="@+id/one_vs_one_player_two_decrease_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/one_vs_one_player_decrease_score"
                        style="@style/one_vs_one_player_button"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    >


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>